# Dotfiles

./: AlphabetizedOUTPUT.txt  Backup.sh  LOGFILE.txt  README.md  vimrc
Keyboard Shorcuts/: README.md  keyboard-i3-Alt+Shift.json  keyboard-i3-Alt.json
bashrc/: .bashrc
doomemacs/: README.md
emacs/: README.md
firefox/: userChrome.css
firefox/chrome/: userChrome.css
firefox/chrome/startpage/: index.html  style.css
gtkrc/: gtkrc
hexchat/: colors.conf
htop/: htoprc
i3/: README.md  config
i3/scripts/: i3get.sh  i3sizemode.sh
polybar/: config  launch.sh
polybar/lib/i3ipcpp/: CMakeLists.txt
polybar/lib/i3ipcpp/libs/jsoncpp-1.7.7/src/lib_json/: json_reader.cpp
polybar/lib/i3ipcpp/src/: ipc.cpp
polybar/lib/xpp/: CMakeLists.txt  README.md
polybar/lib/xpp/generators/: Makefile  cpp_client.py  cpperror.py  cppevent.py  cppreply.py
polybar/lib/xpp/include/xpp/: atom.hpp  colormap.hpp  connection.hpp  core.hpp  cursor.hpp  drawable.hpp  event.hpp  font.hpp  fontable.hpp  gcontext.hpp  pixmap.hpp  window.hpp
rofi-themes/: flat.rasi
rofi/themes/: colors-rofi-dark.rasi  flat.rasi
scripts/: FontInstall  OPinstaller  ascii  autoscript  i3_lemonbar_parser  i3bar  i3fyra  i3gw  i3list  wal
scripts/shutdown/data/: gtkshutdown.c
